--- a/index.html
+++ b/index.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ryan Hammer Portfolio Site</title>
+    <link href="https://fonts.googleapis.com/css?family=Yusei+Magic:regular" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="User-Interface-II\style\index.css">
 </head>
 <body>
     
+    <header>
+        <h1>Ryan Hammer</h1>
+        <nav>
+            <button>Home</button>
+            <button>About</button>
+            <button>Contact</button>
+            <button>Projects</button>
+        </nav>
+    </header>
+
+    <section id="bio">
+        <img src="C:\Users\FreeI\OneDrive\Documents\My Documents\Lambda School\Work\Unit_1\User-Interface-II\assets\bitmoji.png" alt="Me in Bitmoji form">
+        <h2>Ryan Hammer</h2>
+        <button>My Projects</button>
+        <p>Hello! Welcome to my portfolio site! I am a part time web development student traversing my first unit at Lambda School. After several years of using my summers off to dabble in various code languages, I am hoping to my a full career change and become a Full Stack Developer sometime in the next 12 months. Below are some of the projects I've been working on.</p>
+    </section>
+
+    <section id="images-1">
+        <img src="https://unsplash.it/200/200">
+        <img src="https://unsplash.it/200/200">
+        <img src="https://unsplash.it/200/200"> 
+        <img src="https://unsplash.it/200/200">
+    </section>
+
+    <section id="images-2">
+        <img src="https://picsum.photos/">
+        <img src="https://picsum.photos/">
+        <img src="https://picsum.photos/">
+        <img src="https://picsum.photos/">
+    </section>
+
+    <footer>
+        <p>Like what you see?</p>
+        <button>Contact Me</button>
+        <img src="User-Interface-II\assets\twittericon.jpg" alt="FMOT">
+        <img src="User-Interface-II\assets\linkedinicon.jpg" alt="LinkedIn">
+        <img src="User-Interface-II\assets\githubicon.jpg" alt="Check out my Github">
+    </footer>
+
 </body>
 </html>
