Fixed local links to image files

--- a/index.html
+++ b/index.html
@@ -20,32 +20,32 @@
     </header>
 
     <section id="bio">
-        <img src="C:\Users\FreeI\OneDrive\Documents\My Documents\Lambda School\Work\Unit_1\User-Interface-II\assets\bitmoji.png" alt="Me in Bitmoji form">
+        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/bitmoji.png" alt="Me in Bitmoji form">
         <h2>Ryan Hammer</h2>
         <button>My Projects</button>
         <p>Hello! Welcome to my portfolio site! I am a part time web development student traversing my first unit at Lambda School. After several years of using my summers off to dabble in various code languages, I am hoping to my a full career change and become a Full Stack Developer sometime in the next 12 months. Below are some of the projects I've been working on.</p>
     </section>
 
     <section id="images-1">
-        <img src="https://unsplash.it/200/200">
-        <img src="https://unsplash.it/200/200">
-        <img src="https://unsplash.it/200/200"> 
-        <img src="https://unsplash.it/200/200">
+        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project1.jpg">
+        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project2.jpg">
+        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project3.jpg"> 
+        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project3.jpg">
     </section>
-
+    
     <section id="images-2">
-        <img src="https://picsum.photos/">
-        <img src="https://picsum.photos/">
-        <img src="https://picsum.photos/">
-        <img src="https://picsum.photos/">
+        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project5.jpg">
+        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project6.jpg">
+        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project7.jpg">
+        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project8.jpg">
     </section>
 
     <footer>
         <p>Like what you see?</p>
         <button>Contact Me</button>
-        <img src="User-Interface-II\assets\twittericon.jpg" alt="FMOT">
-        <img src="User-Interface-II\assets\linkedinicon.jpg" alt="LinkedIn">
-        <img src="User-Interface-II\assets\githubicon.jpg" alt="Check out my Github">
+        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/twittericon.jpg" alt="FMOT">
+        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/linkedinicon.jpg" alt="LinkedIn">
+        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/githubicon.jpg" alt="Check out my Github">
     </footer>
 
 </body>
