--- a/index.html
+++ b/index.html
@@ -5,47 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan Hammer Portfolio Site</title>
     <link href="https://fonts.googleapis.com/css?family=Yusei+Magic:regular" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="User-Interface-II\style\index.css">
+    <link rel="stylesheet" type="text/css" href="style\index.css">
 </head>
 <body>
     
-    <header>
+    <header class="bookend">
         <h1>Ryan Hammer</h1>
         <nav>
-            <button>Home</button>
-            <button>About</button>
-            <button>Contact</button>
-            <button>Projects</button>
+            <button onclick="location.href='index.html';";>Home</button>
+            <button onclick="location.href='about.html';">About</button>
+            <button onclick="location.href='contact.html';">Contact</button>
+            <button onclick="location.href='projects.html';">Projects</button>
         </nav>
     </header>
 
     <section id="bio">
-        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/bitmoji.png" alt="Me in Bitmoji form">
+        <img id="avi" src="assets\bitmoji.png" alt="Me in Bitmoji form">
         <h2>Ryan Hammer</h2>
-        <button>My Projects</button>
-        <p>Hello! Welcome to my portfolio site! I am a part time web development student traversing my first unit at Lambda School. After several years of using my summers off to dabble in various code languages, I am hoping to my a full career change and become a Full Stack Developer sometime in the next 12 months. Below are some of the projects I've been working on.</p>
+        <button id="my-projects" onclick="location.href='projects.html';">My Projects</button>
+        <p id="bio-text">Hello! Welcome to my portfolio site! I am a part time web development student traversing my first unit at Lambda School. After several years of using my summers off to dabble in various code languages, I am hoping to my a full career change and become a Full Stack Developer sometime in the next 12 months. Below are some of the projects I've been working on.</p>
     </section>
 
     <section id="images-1">
-        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project1.jpg">
-        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project2.jpg">
-        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project3.jpg"> 
-        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project3.jpg">
+        <figure>
+            <img class="project-image" src="assets\project1.jpg">
+            <figcaption>Autumn Leaf Compost</figcaption>
+        </figure> 
+        <figure>
+            <img class="project-image" src="assets\project2.jpg">
+            <figcaption>Spring Breathes</figcaption>
+        </figure> 
+        <figure>
+            <img class="project-image" src="assets\project3.jpg">
+            <figcaption>Bridges to Somewhere</figcaption>
+        </figure>  
+        <figure>
+            <img class="project-image" src="assets\project4.jpg">
+            <figcaption>Meditations</figcaption>
+        </figure> 
     </section>
     
     <section id="images-2">
-        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project5.jpg">
-        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project6.jpg">
-        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project7.jpg">
-        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/project8.jpg">
+        <figure>
+            <img class="project-image" src="assets\project5.jpg">
+            <figcaption>Sustainable Sunflowers</figcaption>
+        </figure> 
+        <figure>
+            <img class="project-image" src="assets\project6.jpg">
+            <figcaption>Morning Pages</figcaption>
+        </figure> 
+        <figure>
+            <img class="project-image" src="assets\project7.jpg">
+            <figcaption>Sunrise in Perth</figcaption>
+        </figure>  
+        <figure>
+            <img class="project-image" src="assets\project8.jpg">
+            <figcaption>The Young Men and the Lake</figcaption>
+        </figure> 
     </section>
-
-    <footer>
-        <p>Like what you see?</p>
-        <button>Contact Me</button>
-        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/twittericon.jpg" alt="FMOT">
-        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/linkedinicon.jpg" alt="LinkedIn">
-        <img src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/githubicon.jpg" alt="Check out my Github">
+  
+    <footer class="bookend">
+        <p id="footer-text">Like what you see?</p>
+        <button id="big-contact" onclick="location.href='contact.html';">Contact Me</button>
+        <div id="footer-flex">
+            <a href="https://twitter.com">
+                <img class="icon" src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/twittericon.jpg" alt="FMOT">
+            </a>
+            <a href="https://linkedin.com">
+                <img class="icon" src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/linkedinicon.jpg" alt="LinkedIn">
+            </a>
+            <a href="https://github.com">
+                <img class="icon" src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/githubicon.jpg" alt="Check out my Github">
+            </a>
+        </div>
     </footer>
 
 </body>
