fixed file path for social media icon links

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
         <button id="big-contact" onclick="location.href='contact.html';">Contact Me</button>
         <div id="footer-flex">
             <a href="https://twitter.com">
-                <img class="icon" src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/twittericon.jpg" alt="FMOT">
+                <img class="icon" src="assets\twittericon.jpg" alt="FMOT">
             </a>
             <a href="https://linkedin.com">
-                <img class="icon" src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/linkedinicon.jpg" alt="LinkedIn">
+                <img class="icon" src="assets\linkedinicon.jpg" alt="LinkedIn">
             </a>
             <a href="https://github.com">
-                <img class="icon" src="file:///C:/Users/FreeI/OneDrive/Documents/My%20Documents/Lambda%20School/Work/Unit_1/User-Interface-II/assets/githubicon.jpg" alt="Check out my Github">
+                <img class="icon" src="assets\githubicon.jpg" alt="Check out my Github">
             </a>
         </div>
     </footer>
