created responsive design section for tablet screen width

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <section class="bio">
-        <img class="avi" src="assets\bitmoji.png" alt="Me in Bitmoji form">
+        <img class="avi" src="assets\bitmoji.png" alt="Ryan in Bitmoji form">
         <div class="bio-div">
             <h2>Ryan Hammer</h2>
             <button class="nav-button" onclick="location.href='projects.html';">My Projects</button>
@@ -31,51 +31,51 @@
 
     <section class="images-box">
         <figure>
-            <img class="project-image" src="assets\project1.jpg">
+            <img class="project-image" src="assets\project1.jpg" alt="Close up of autumn colored leaves on the ground">
             <figcaption>Autumn Leaf Compost</figcaption>
         </figure> 
         <figure>
-            <img class="project-image" src="assets\project2.jpg">
+            <img class="project-image" src="assets\project2.jpg" alt="Spring wheat ready to be harvested">
             <figcaption>Spring Breathes</figcaption>
         </figure> 
         <figure>
-            <img class="project-image" src="assets\project3.jpg">
+            <img class="project-image" src="assets\project3.jpg" alt="Looking up at the support beams beneath a bridge">
             <figcaption>Bridges to Somewhere</figcaption>
         </figure>  
         <figure>
-            <img class="project-image" src="assets\project4.jpg">
+            <img class="project-image" src="assets\project4.jpg" alt="The back of a person's head staring up at the sky">
             <figcaption>Meditations</figcaption>
         </figure> 
     </section>
     
     <section class="images-box">
         <figure>
-            <img class="project-image" src="assets\project5.jpg">
+            <img class="project-image" src="assets\project5.jpg" alt="Flowers in the foreground with a vast canyon in the background">
             <figcaption>Sustainable Sunflowers</figcaption>
         </figure> 
         <figure>
-            <img class="project-image" src="assets\project6.jpg">
+            <img class="project-image" src="assets\project6.jpg" alt="Handwritten notes, a coffee, a phone, and a freshly opened laptop">
             <figcaption>Morning Pages</figcaption>
         </figure> 
         <figure>
-            <img class="project-image" src="assets\project7.jpg">
+            <img class="project-image" src="assets\project7.jpg" alt="Calm water with the sunrise on the horizon">
             <figcaption>Sunrise in Perth</figcaption>
         </figure>  
         <figure>
-            <img class="project-image" src="assets\project8.jpg">
+            <img class="project-image" src="assets\project8.jpg" alt="Two men paddling in a canoe">
             <figcaption>The Young Men and the Lake</figcaption>
         </figure> 
     </section>
   
     <footer class="bookend">
-        <p id="footer-text">Like what you see?</p>
+        <p class="footer-text">Like what you see?</p>
         <button class="nav-button" onclick="location.href='contact.html';">Contact Me</button>
-        <div id="footer-flex">
+        <div class="footer-flex">
             <a href="https://twitter.com">
-                <img class="icon" src="assets\twittericon.jpg" alt="FMOT">
+                <img class="icon" src="assets\twittericon.jpg" alt="Link to my Twitter">
             </a>
             <a href="https://linkedin.com">
-                <img class="icon" src="assets\linkedinicon.jpg" alt="LinkedIn">
+                <img class="icon" src="assets\linkedinicon.jpg" alt="Link to my LinkedIn">
             </a>
             <a href="https://github.com">
                 <img class="icon" src="assets\githubicon.jpg" alt="Check out my Github">
